# advent-of-code

./: .gitignore  Cargo.toml  README.md  setup_workspace.py
2020/day-1/: __init__.py  olivers_solution.py
2020/day-3/: __init__.py
2021/: pyproject.toml
2021/common/: data.py
2021/day-1/: __init__.py
2021/day-2/: __init__.py
2022/advent-of-code-python/: main.py  pyproject.toml
advent-of-code-2022/: Cargo.toml
advent-of-code-2022/src/: day3.rs  day4.rs  day5.rs  day6.rs  main.rs  util.rs
common/: data.py
f#/: AdventOfCode-2020.sln  AdventOfCode.sln
f#/AoC-2020/: AoC-2020.fsproj  Day13.fs  Program.fs  day1.fs  day10.fs  day11.fs  day12.fs  day14.fs  day17.fs  day17InFourDimensions.fs  (+9 more)
python/: pyproject.toml
python/2020/day-1/: __init__.py
python/2020/day-3/: __init__.py
python/2022/advent-of-code-python/: main.py
python/2022/advent-of-code-python/day12/: __init__.py.old  paths.py
python/2022/advent-of-code-python/day13/: main.py  packet.py
python/2022/advent-of-code-python/day14/: __init__.py
python/2022/advent-of-code-python/day15/: __init__.py  main.py  sensors.py
python/2022/advent-of-code-python/day16/: __init__.py  main.py  valves.py
python/2022/advent-of-code-python/day18/: main.py
python/2022/advent-of-code-python/day20/: __init__.py
python/2022/advent-of-code-python/day21/: __init__.py
python/2022/advent-of-code-python/day25/: main.py  snafu.py
python/2022/advent-of-code-python/day7/: main.py
python/2022/advent-of-code-python/day9/: day_9.py
python/common/: data.py  grid_objects.py
src/: day1.rs  day2.rs  main.rs
(+78 files in other folders)
